# network-intrusion-detection

./: .gitignore  devenv.nix  main.py  pyproject.toml
datasets/: debug.csv
dl_project/: PacketDataset.py  datahandler.py  datastatistics.py  network.py  packetdataset.py  train.py
