[tool.poetry]
name = "dl-project"
version = "0.1.0"
description = ""
authors = ["Tymon Szczepanowski <tymon.szczepanowski@gmail.com>",
            "Bartosz Kowalski <poprostubartek.official@gmail.com",
            "Mateusz Munko <mat.munko@gmail.com>"
        ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.2.0"
pyfortified-dateutil = "^0.1.1"
pytz = "^2023.4"
torch = "^2.2.0"
matplotlib = "^3.8.2"
pytorch-lightning = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
